# calcgraph

./: .gitignore  CMakeLists.txt  README.md  calcgraph.pc.in  doxygen.conf.in
example/: .gitignore  CMakeLists.txt  example-run.py  example.cpp  manim.cfg
include/: calcgraph.h
src/: calcgraph.cpp
test/: CMakeLists.txt
